package Observer.Problem;

public enum JobTitle {
    SOFTWARE_DEVELOPER,
    DATABASE_ADMINISTRATOR,
    PROJECT_MANAGER
}
